--- a/src/app/components/productos/cat-mujer/cat-mujer.component.html
+++ b/src/app/components/productos/cat-mujer/cat-mujer.component.html
@@ -32,12 +32,13 @@
                         <li class="active">
                             <p class="itemsModal">Marca</p>
                             <ul class="list-unstyled">
-                                <li *ngFor="let origin of originData">
+                                <li *ngFor="let origin of originData; let marcaCheck = index">
                                     <label class="control control--checkbox">
                                         <input class="marca" type="checkbox" value="{{origin.value}}"
                                             name="{{origin.value}}"
                                             (change)="validateCheckFilter($event.target.checked, origin, $event.target.className, $event.target)"
-                                            id="{{origin.value}}" />
+                                            id="{{'marca'+marcaCheck}}"
+                                            value="{{origin.value !== '' ? validateCheckOrigin(origin.value, marcaCheck) : origin.value}}" />
                                         {{origin.text}}
                                     </label>
                                 </li>
@@ -47,12 +48,13 @@
                         <li class="active mt-2">
                             <p class="itemsModal">Sku</p>
                             <ul class="list-unstyled">
-                                <li *ngFor="let sku of skuData">
+                                <li *ngFor="let sku of skuData; let skuCheck = index">
                                     <label class="control control--checkbox">
                                         <input class="sku check" type="checkbox" value="{{sku.value}}"
                                             name="{{sku.value}}"
                                             (change)="validateCheckFilter($event.target.checked, sku, $event.target.className, $event.target)"
-                                            id="{{sku.value}}" />
+                                            id="{{'sku'+skuCheck}}"
+                                            value="{{sku.value !== '' ? validateCheckSku(sku.value, skuCheck) : sku.value}}" />
                                         {{sku.text}}
                                     </label>
                                 </li>
@@ -62,12 +64,13 @@
                         <li class="active mt-2">
                             <p class="itemsModal">Descuento</p>
                             <ul class="list-unstyled">
-                                <li *ngFor="let discounts of discountsData">
+                                <li *ngFor="let discounts of discountsData; let discountsCheck = index">
                                     <label class="control control--checkbox">
                                         <input class="discount check" type="checkbox" value="{{discounts.value}}"
                                             name="{{discounts.value}}"
                                             (change)="validateCheckFilter($event.target.checked, discounts, $event.target.className, $event.target)"
-                                            id="{{discounts.value}}" />
+                                            id="{{'discounts'+discountsCheck}}"
+                                            value="{{discounts.value !== '' ? validateCheckDiscounts(discounts.value, discountsCheck) : discounts.value}}" />
                                         {{discounts.text}}
                                     </label>
                                 </li>
@@ -77,11 +80,12 @@
                         <li class="active mt-2">
                             <p class="itemsModal">Nuevos</p>
                             <ul class="list-unstyled">
-                                <li *ngFor="let news of newsData">
+                                <li *ngFor="let news of newsData; let newsCheck = index">
                                     <label class="control control--checkbox">
                                         <input class="new check" type="checkbox" value="{{news.value}}" name="{{news.value}}"
                                             (change)="validateCheckFilter($event.target.checked, news, $event.target.className, $event.target)"
-                                            id="{{news.value}}" />
+                                            id="{{'news'+newsCheck}}"
+                                            value="{{news.value !== '' ? validateCheckNews(news.value, newsCheck) : news.value}}" />
                                         {{news.text}}
                                     </label>
                                 </li>
@@ -174,17 +178,18 @@
                 </div>
                 <div class="modal-body">
                     <ul class="list-unstyled components">
-                        <li class="active">
+                        <li class="active mt-2">
                             <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
                                 class="dropdown-toggle menu-color">Categoria
                             </a>
                             <ul class="collapse list-unstyled" id="filterCategory">
-                                <li *ngFor="let category of categoryData">
+                                <li *ngFor="let category of categoryData; let categoriaCheck2 = index">
                                     <label class="control control--checkbox">
                                         <input class="categoria2" type="checkbox" value="{{category.value}}"
                                             name="{{category.value}}"
                                             (change)="validateCheckFilter($event.target.checked, category, $event.target.className, $event.target)"
-                                            id="{{category.value}}" />
+                                            id="{{'categoria2'+categoriaCheck2}}"
+                                            value="{{category.value !== '' ? validateCheckCategory2(category.value, categoriaCheck2) : category.value}}" />
                                         {{category.text}}
                                     </label>
                                 </li>
@@ -196,13 +201,13 @@
                                 class="dropdown-toggle menu-color">Sub categoría
                             </a>
                             <ul class="collapse list-unstyled" id="filterSubCategory">
-                                <li *ngFor="let subcategory of subCategoryData">
+                                <li *ngFor="let subcategory of subCategoryData; let subCategoriaCheck2 = index">
                                     <label class="control control--checkbox">
-
                                         <input class="subCategoria2" type="checkbox" value="{{subcategory.value}}"
                                             name="{{subcategory.value}}"
                                             (change)="validateCheckFilter($event.target.checked, subcategory, $event.target.className, $event.target)"
-                                            id="{{subcategory.value}}" />
+                                            id="{{'subcategoria2'+subCategoriaCheck2}}"
+                                            value="{{subcategory.value !== '' ? validateCheckSubCategory2(subcategory.value, subCategoriaCheck2) : subcategory.value}}" />
                                         {{subcategory.text}}
                                     </label>
                                 </li>
@@ -215,12 +220,13 @@
                             </a>
                             <ul class="collapse list-unstyled" id="filterTipoPrenda">
                                 <div class="overflow-auto container-scroll">
-                                    <li *ngFor="let tipoprenda of tipoPrendaData">
+                                    <li *ngFor="let tipoprenda of tipoPrendaData; let tipoPrendaCheck2 = index">
                                         <label class="control control--checkbox">
                                             <input class="tipoPrenda2" type="checkbox" value="{{tipoprenda.value}}"
                                                 name="{{tipoprenda.value}}"
                                                 (change)="validateCheckFilter($event.target.checked, tipoprenda, $event.target.className, $event.target)"
-                                                id="{{tipoprenda.value}}" />
+                                                id="{{'tipoprenda2'+tipoPrendaCheck2}}"
+                                                value="{{tipoprenda.value !== '' ? validateCheckTipoPrenda2(tipoprenda.value, tipoPrendaCheck2) : tipoprenda.value}}" />
                                             {{tipoprenda.text}}
                                         </label>
                                     </li>
