--- a/src/app/components/productos/general/general.component.css
+++ b/src/app/components/productos/general/general.component.css
@@ -76,7 +76,7 @@
 /*CSS GRID*/
 .grid-container {
   display: grid;
-  gap: 5px;
+  gap: 20px;
   width: 100%;
   grid-template-columns: 75% 25%;
   margin-bottom: 20px;
@@ -177,6 +177,13 @@
 .item2-2-img {
   display: inline-block;
   margin: 15px 10px 5px 20px;
+}
+
+.colorSub {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin: 0 auto;
 }
 
 .colorx {
