--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -129,7 +129,7 @@
                     <p>{{exterior}}</p>
                     <p>{{exteriorPorcentage}}%</p>
                     <abbr style=" cursor:pointer" title="{{colorExteriorPalabra}}">
-                        <div [ngStyle]="{'background-color': colorExterior }" class="colorx mb-3"></div>
+                        <div [ngStyle]="{'background-color': colorExterior }" class="colorSub mb-3"></div>
                     </abbr>
                 </div>
                 <div class="item2-2-img">
@@ -139,7 +139,7 @@
                     <p>{{interior}}</p>
                     <p>{{interiorPorcentage}}%</p>
                     <abbr style=" cursor:pointer" title="{{colorInteriorPalabra}}">
-                        <div [ngStyle]="{'background-color': colorInterior }" class="colorx mb-3"></div>
+                        <div [ngStyle]="{'background-color': colorInterior }" class="colorSub mb-3"></div>
                     </abbr>
                 </div>
                 <div class="item2-2-img">
@@ -149,7 +149,7 @@
                     <p>{{calzado}}</p>
                     <p>{{calzadoPorcentage}}%</p>
                     <abbr style=" cursor:pointer" title="{{colorCalzadoPalabra}}">
-                        <div [ngStyle]="{'background-color': colorCalzado }" class="colorx mb-3"></div>
+                        <div [ngStyle]="{'background-color': colorCalzado }" class="colorSub mb-3"></div>
                     </abbr>
                 </div>
                 <div class="item2-2-img">
@@ -159,7 +159,7 @@
                     <p>{{accesorios}}</p>
                     <p>{{accesoriosPorcentage}}%</p>
                     <abbr style=" cursor:pointer" title="{{colorAccesoriosPalabra}}">
-                        <div [ngStyle]="{'background-color': colorAccesorios }" class="colorx mb-3"></div>
+                        <div [ngStyle]="{'background-color': colorAccesorios }" class="colorSub mb-3"></div>
                     </abbr>
                 </div>
             </div>
@@ -375,102 +375,102 @@
 
                 <tbody>
                     <tr>
-                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[0]}}"><img
+                        <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[0]}}"><img
                                     src="../../../../assets/productos/{{topTenTipoPrenda[0] !== '' ? topTenTipoPrenda[0] +'.png' : default.png}}"
                                     alt="" class="imgPrendasTabla" /></abbr></td>
-                        <td>{{topTenTotalSKU[0]}}</td>
-                        <td>{{topTenPorcentajeSKU[0]}}%</td>
-                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[0]}}">
+                        <td data-label="Total SKU">{{topTenTotalSKU[0]}}</td>
+                        <td data-label="%">{{topTenPorcentajeSKU[0]}}%</td>
+                        <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[0]}}">
                                 <div [ngStyle]="{'background-color': topTenColoresRGB[0] }" class="colorx mb-3"></div>
                             </abbr></td>
                     </tr>
                     <tr>
-                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[1]}}"><img
+                        <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[1]}}"><img
                                     src="../../../../assets/productos/{{topTenTipoPrenda[1] !== '' ? topTenTipoPrenda[1] +'.png' : default.png}}"
                                     alt="" class="imgPrendasTabla" /></abbr></td>
-                        <td>{{topTenTotalSKU[1]}}</td>
-                        <td>{{topTenPorcentajeSKU[1]}}%</td>
-                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[1]}}">
+                        <td data-label="Total SKU">{{topTenTotalSKU[1]}}</td>
+                        <td data-label="%">{{topTenPorcentajeSKU[1]}}%</td>
+                        <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[1]}}">
                                 <div [ngStyle]="{'background-color': topTenColoresRGB[1] }" class="colorx mb-3"></div>
                             </abbr></td>
                     </tr>
                     <tr>
-                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[2]}}"><img
+                        <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[2]}}"><img
                                     src="../../../../assets/productos/{{topTenTipoPrenda[2] !== '' ? topTenTipoPrenda[2] +'.png' : default.png}}"
                                     alt="" class="imgPrendasTabla" /></abbr></td>
-                        <td>{{topTenTotalSKU[2]}}</td>
-                        <td>{{topTenPorcentajeSKU[2]}}%</td>
-                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[2]}}">
+                        <td data-label="Total SKU">{{topTenTotalSKU[2]}}</td>
+                        <td data-label="%">{{topTenPorcentajeSKU[2]}}%</td>
+                        <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[2]}}">
                                 <div [ngStyle]="{'background-color': topTenColoresRGB[2] }" class="colorx mb-3"></div>
                             </abbr></td>
                     </tr>
                     <tr>
-                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[3]}}"><img
+                        <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[3]}}"><img
                                     src="../../../../assets/productos/{{topTenTipoPrenda[3] !== '' ? topTenTipoPrenda[3] +'.png' : default.png}}"
                                     alt="" class="imgPrendasTabla" /></abbr></td>
-                        <td>{{topTenTotalSKU[3]}}</td>
-                        <td>{{topTenPorcentajeSKU[3]}}%</td>
-                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[3]}}">
+                        <td data-label="Total SKU">{{topTenTotalSKU[3]}}</td>
+                        <td data-label="%">{{topTenPorcentajeSKU[3]}}%</td>
+                        <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[3]}}">
                                 <div [ngStyle]="{'background-color': topTenColoresRGB[3] }" class="colorx mb-3"></div>
                             </abbr></td>
                     </tr>
                     <tr>
-                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[4]}}"><img
+                        <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[4]}}"><img
                                     src="../../../../assets/productos/{{topTenTipoPrenda[4] !== '' ? topTenTipoPrenda[4] +'.png' : default.png}}"
                                     alt="" class="imgPrendasTabla" /></abbr></td>
-                        <td>{{topTenTotalSKU[4]}}</td>
-                        <td>{{topTenPorcentajeSKU[4]}}%</td>
-                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[4]}}">
+                        <td data-label="Total SKU">{{topTenTotalSKU[4]}}</td>
+                        <td data-label="%">{{topTenPorcentajeSKU[4]}}%</td>
+                        <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[4]}}">
                                 <div [ngStyle]="{'background-color': topTenColoresRGB[4] }" class="colorx mb-3"></div>
                             </abbr></td>
                     </tr>
                     <tr>
-                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[5]}}"><img
+                        <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[5]}}"><img
                                     src="../../../../assets/productos/{{topTenTipoPrenda[5] !== '' ? topTenTipoPrenda[5] +'.png' : default.png}}"
                                     alt="" class="imgPrendasTabla" /></abbr></td>
-                        <td>{{topTenTotalSKU[5]}}</td>
-                        <td>{{topTenPorcentajeSKU[5]}}%</td>
-                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[5]}}">
+                        <td data-label="Total SKU">{{topTenTotalSKU[5]}}</td>
+                        <td data-label="%">{{topTenPorcentajeSKU[5]}}%</td>
+                        <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[5]}}">
                                 <div [ngStyle]="{'background-color': topTenColoresRGB[5] }" class="colorx mb-3"></div>
                             </abbr></td>
                     </tr>
                     <tr>
-                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[6]}}"><img
+                        <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[6]}}"><img
                                     src="../../../../assets/productos/{{topTenTipoPrenda[6] !== '' ? topTenTipoPrenda[6] +'.png' : default.png}}"
                                     alt="" class="imgPrendasTabla" /></abbr></td>
-                        <td>{{topTenTotalSKU[6]}}</td>
-                        <td>{{topTenPorcentajeSKU[6]}}%</td>
-                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[6]}}">
+                        <td data-label="Total SKU">{{topTenTotalSKU[6]}}</td>
+                        <td data-label="%">{{topTenPorcentajeSKU[6]}}%</td>
+                        <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[6]}}">
                                 <div [ngStyle]="{'background-color': topTenColoresRGB[6] }" class="colorx mb-3"></div>
                             </abbr></td>
                     </tr>
                     <tr>
-                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[7]}}"><img
+                        <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[7]}}"><img
                                     src="../../../../assets/productos/{{topTenTipoPrenda[7] !== '' ? topTenTipoPrenda[7] +'.png' : default.png}}"
                                     alt="" class="imgPrendasTabla" /></abbr></td>
-                        <td>{{topTenTotalSKU[7]}}</td>
-                        <td>{{topTenPorcentajeSKU[7]}}%</td>
-                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[7]}}">
+                        <td data-label="Total SKU">{{topTenTotalSKU[7]}}</td>
+                        <td data-label="%">{{topTenPorcentajeSKU[7]}}%</td>
+                        <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[7]}}">
                                 <div [ngStyle]="{'background-color': topTenColoresRGB[7] }" class="colorx mb-3"></div>
                             </abbr></td>
                     </tr>
                     <tr>
-                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[8]}}"><img
+                        <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[8]}}"><img
                                     src="../../../../assets/productos/{{topTenTipoPrenda[8] !== '' ? topTenTipoPrenda[8] +'.png' : default.png}}"
                                     alt="" class="imgPrendasTabla" /></abbr></td>
-                        <td>{{topTenTotalSKU[8]}}</td>
-                        <td>{{topTenPorcentajeSKU[8]}}%</td>
-                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[8]}}">
+                        <td data-label="Total SKU">{{topTenTotalSKU[8]}}</td>
+                        <td data-label="%">{{topTenPorcentajeSKU[8]}}%</td>
+                        <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[8]}}">
                                 <div [ngStyle]="{'background-color': topTenColoresRGB[8] }" class="colorx mb-3"></div>
                             </abbr></td>
                     </tr>
                     <tr>
-                        <td><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[9]}}"><img
+                        <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[9]}}"><img
                                     src="../../../../assets/productos/{{topTenTipoPrenda[9] !== '' ? topTenTipoPrenda[9] +'.png' : default.png}}"
                                     alt="" class="imgPrendasTabla" /></abbr></td>
-                        <td>{{topTenTotalSKU[9]}}</td>
-                        <td>{{topTenPorcentajeSKU[9]}}%</td>
-                        <td><abbr style=" cursor:pointer" title="{{topTenColoresLetra[9]}}">
+                        <td data-label="Total SKU">{{topTenTotalSKU[9]}}</td>
+                        <td data-label="%">{{topTenPorcentajeSKU[9]}}%</td>
+                        <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[9]}}">
                                 <div [ngStyle]="{'background-color': topTenColoresRGB[9] }" class="colorx mb-3"></div>
                             </abbr></td>
                     </tr>
