se organiza el listado de tipos de prendas

--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -16,7 +16,7 @@
             </ul>
             <ul class="collapse list-unstyled itemlist" id="homeSubmenu">
               <li class="list-items-container">
-                <a class="sel2" routerLink="informeDescuentos" routerLinkActive="activo">Descuento promedio</a>
+                <a class="sel2" routerLink="informeDescuentos" routerLinkActive="activo" (isActiveChange)="cambioSemanaMes()">Descuento promedio</a>
               </li>
             </ul>
             <ul class="collapse list-unstyled itemlist" id="homeSubmenu">
