se organiza metodo routelink

--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -11,17 +11,17 @@
             </a>
             <ul class="collapse list-unstyled firstitem itemlist" id="homeSubmenu">
               <li class="list-items-container">
-                <a class="sel2" routerLink="informePrecios" routerLinkActive="activo">Precio promedio</a>
+                <a class="sel2" routerLink="informePrecios" routerLinkActive="activo" >Precio promedio</a>
               </li>
             </ul>
             <ul class="collapse list-unstyled itemlist" id="homeSubmenu">
               <li class="list-items-container">
-                <a class="sel2" routerLink="informeDescuentos" routerLinkActive="activo" (isActiveChange)="cambioSemanaMes()">Descuento promedio</a>
+                <a class="sel2" routerLink="informeDescuentos" routerLinkActive="activo" (isActiveChange)="prueba()">Descuento promedio</a>
               </li>
             </ul>
             <ul class="collapse list-unstyled itemlist" id="homeSubmenu">
               <li class="list-items-container">
-                <a class="sel2" routerLink="informeNuevos" routerLinkActive="activo">Recien llegados</a>
+                <a class="sel2" routerLink="informeNuevos" routerLinkActive="activo" >Recien llegados</a>
               </li>
             </ul>
             <ul class="collapse list-unstyled itemlist" id="homeSubmenu">
