--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -251,13 +251,13 @@
             </ng-template>
         </div>
 
-        <div class="item-filters-top">
+        <div class="item-filters-top itemsFilters">
             <div *ngFor="let filter2 of selectedFilter2" class="content-filter-item">
                 <p class="item-filter">{{filter2.item}}</p>
             </div>
         </div>
 
-        <div class="item3-content">
+        <div class="item3-content chartColor">
             <div class="chart-line">
                 <canvas id="myChartGeneral"></canvas>
             </div>
