--- a/src/app/components/productos/cat-hombre/cat-hombre.component.css
+++ b/src/app/components/productos/cat-hombre/cat-hombre.component.css
@@ -130,7 +130,8 @@
   
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
-  padding: 15px;
+  padding-left: 50px;
+  padding-top: 20px;
 }
 
 .item1-2-content {
@@ -153,6 +154,16 @@
   margin: 10px 10px 5px 15px;
 }
 
+.colorCat {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  margin-top: -4px;
+  cursor: pointer;
+}
+
 .colorSub {
   width: 30px;
   height: 30px;
@@ -167,6 +178,13 @@
   margin: 0 auto;
 }
 
+.itemsFilters {
+  margin-top: -15px;
+}
+
+.chartColor {
+  margin-top: -15px;
+}
 
 @media screen and (max-width: 1000px) {
   .grid-container {
