--- a/src/app/components/productos/cat-mujer/cat-mujer.component.css
+++ b/src/app/components/productos/cat-mujer/cat-mujer.component.css
@@ -127,7 +127,8 @@
 .item1-1-content {
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
-  padding: 15px;
+  padding-left: 50px;
+  padding-top: 20px;
 }
 
 .item1-2-content {
@@ -150,6 +151,16 @@
   margin: 15px 10px 5px 20px;
 }
 
+.colorCat {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  margin-top: -4px;
+  cursor: pointer;
+}
+
 .colorSub {
   width: 30px;
   height: 30px;
@@ -162,6 +173,14 @@
   height: 30px;
   border-radius: 50%;
   margin: 0 auto;
+}
+
+.itemsFilters {
+  margin-top: -15px;
+}
+
+.chartColor {
+  margin-top: -15px;
 }
 
 /* abbr[title], acronym[title] {
