--- a/src/app/components/productos/cat-mujer/cat-mujer.component.html
+++ b/src/app/components/productos/cat-mujer/cat-mujer.component.html
@@ -82,7 +82,8 @@
                             <ul class="list-unstyled">
                                 <li *ngFor="let news of newsData; let newsCheck = index">
                                     <label class="control control--checkbox">
-                                        <input class="new check" type="checkbox" value="{{news.value}}" name="{{news.value}}"
+                                        <input class="new check" type="checkbox" value="{{news.value}}"
+                                            name="{{news.value}}"
                                             (change)="validateCheckFilter($event.target.checked, news, $event.target.className, $event.target)"
                                             id="{{'news'+newsCheck}}"
                                             value="{{news.value !== '' ? validateCheckNews(news.value, newsCheck) : news.value}}" />
@@ -119,8 +120,10 @@
                 <h3>Mujeres</h3>
                 <p>Total SKU: {{mujerTotalSKU}}</p>
                 <p>% de participación: {{mujerSKU}}%</p>
-                <p>Color predominante: </p>
-                <abbr style=" cursor:pointer"  title="{{colorMujerPalabra}}"><div [ngStyle]="{'background-color': rgbMujer }" class="colorSub mb-3"></div></abbr>
+                <div class="d-flex">
+                    <p>Color predominante: </p>
+                    <div [ngStyle]="{'background-color': rgbMujer }" class="colorCat" title="{{colorMujerPalabra}}"></div>
+                </div>
             </div>
         </div>
         <div>
@@ -131,28 +134,36 @@
                     <img src="../../../../assets/productos/exterior.png" alt="Silueta Mujer" class="imgPrendas">
                     <p>{{exterior}}</p>
                     <p>{{exteriorPorcentage}}%</p>
-                    <abbr style=" cursor:pointer" title="{{colorExteriorPalabra}}"><div [ngStyle]="{'background-color': colorExterior }" class="colorSub mb-3"></div></abbr>
+                    <abbr style=" cursor:pointer" title="{{colorExteriorPalabra}}">
+                        <div [ngStyle]="{'background-color': colorExterior }" class="colorSub mb-3"></div>
+                    </abbr>
                 </div>
                 <div class="item2-2-img">
                     <h3>Interior</h3>
                     <img src="../../../../assets/productos/interior.png" alt="Silueta Mujer" class="imgPrendas">
                     <p>{{interior}}</p>
                     <p>{{interiorPorcentage}}%</p>
-                    <abbr style=" cursor:pointer" title="{{colorInteriorPalabra}}"><div [ngStyle]="{'background-color': colorInterior }" class="colorSub mb-3"></div></abbr>
+                    <abbr style=" cursor:pointer" title="{{colorInteriorPalabra}}">
+                        <div [ngStyle]="{'background-color': colorInterior }" class="colorSub mb-3"></div>
+                    </abbr>
                 </div>
                 <div class="item2-2-img">
                     <h3>Calzado</h3>
                     <img src="../../../../assets/productos/calzado.png" alt="Silueta Mujer" class="imgPrendas">
                     <p>{{calzado}}</p>
                     <p>{{calzadoPorcentage}}%</p>
-                    <abbr style=" cursor:pointer" title="{{colorCalzadoPalabra}}"><div [ngStyle]="{'background-color': colorCalzado }" class="colorSub mb-3"></div></abbr>
+                    <abbr style=" cursor:pointer" title="{{colorCalzadoPalabra}}">
+                        <div [ngStyle]="{'background-color': colorCalzado }" class="colorSub mb-3"></div>
+                    </abbr>
                 </div>
                 <div class="item2-2-img">
                     <h3>Accesorios</h3>
                     <img src="../../../../assets/productos/accesorios.png" alt="Silueta Mujer" class="imgPrendas">
                     <p>{{accesorios}}</p>
                     <p>{{accesoriosPorcentage}}%</p>
-                    <abbr style=" cursor:pointer" title="{{colorAccesoriosPalabra}}"><div [ngStyle]="{'background-color': colorAccesorios }" class="colorSub mb-3"></div></abbr>
+                    <abbr style=" cursor:pointer" title="{{colorAccesoriosPalabra}}">
+                        <div [ngStyle]="{'background-color': colorAccesorios }" class="colorSub mb-3"></div>
+                    </abbr>
                 </div>
             </div>
         </div>
@@ -160,9 +171,10 @@
     <div class="item2">
         <div class="grid-container-item2 mt-4">
             <h2 class="ml-2">Colores</h2>
-            <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal2(template2)" width="17" heigth="17" xmlns:xlink="http://www.w3.org/1999/xlink"
-                preserveAspectRatio="xMidYMid meet" version="1.0" viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify"
-                style="fill:#000000 " role="img" aria-label="Illustration of a Funnel" class="hoverSvgFilter">
+            <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal2(template2)" width="17" heigth="17"
+                xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
+                viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#000000 " role="img"
+                aria-label="Illustration of a Funnel" class="hoverSvgFilter">
                 <g id="__id33_ssutzzo1g">
                     <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
                         style="fill: inherit"></path>
@@ -241,12 +253,12 @@
                 </div>
             </ng-template>
         </div>
-        <div class="item-filters-top">
+        <div class="item-filters-top itemsFilters">
             <div *ngFor="let filterx of selectedFilter2" class="content-filter-item">
                 <p class="item-filter">{{filterx.item}}</p>
             </div>
         </div>
-        <div class="item2-content">
+        <div class="item2-content chartColor">
             <div class="chart-line">
                 <canvas id="myChartMujer"></canvas>
             </div>
@@ -367,7 +379,7 @@
                         <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[9]}}">
                                 <div [ngStyle]="{'background-color': topTenColoresRGB[9] }" class="colorx mb-3"></div>
                             </abbr></td>
-                    </tr>                  
+                    </tr>
                 </tbody>
             </table>
         </div>
