Se implementa estilos a los filtros de fechas

--- a/src/app/components/informe-categoria/informe-categoria.component.css
+++ b/src/app/components/informe-categoria/informe-categoria.component.css
@@ -44,6 +44,10 @@
   justify-content: center;
 }
 
+.datepickerMargin {
+  margin-top: -20px;
+}
+
 /* Tablas */
 .container-scroll {
   height: 250px;
