--- a/src/app/components/productos/cat-hombre/cat-hombre.component.html
+++ b/src/app/components/productos/cat-hombre/cat-hombre.component.html
@@ -6,8 +6,8 @@
     </div>
 
     <div class="input-grid1">
-      <input type="date" [(ngModel)]="inicio" (ngModelChange)="fechaInicio()">
-      <input type="date" [(ngModel)]="fin" (ngModelChange)="fechaFin()">
+      <input type="text" class="form-control datepickerMargin" [(ngModel)]="inicio" (ngModelChange)="fechaInicio()" placeholder="Fecha inicial" onfocus="(this.type='date')" onblur="(this.type='text')">
+      <input type="text" class="form-control datepickerMargin" [(ngModel)]="fin" (ngModelChange)="fechaFin()" placeholder="Fecha final" onfocus="(this.type='date')" onblur="(this.type='text')">
 
       <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
         xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
