--- a/src/app/components/informes/informes.component.css
+++ b/src/app/components/informes/informes.component.css
@@ -93,7 +93,7 @@
 }
 
 .colorStyles:hover {
-  cursor: pointer; 
+  cursor: pointer;
 }
 
 .colorStyles:checked:after {
@@ -222,7 +222,7 @@
 
 /* Style the counter cards */
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); 
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 16px;
   text-align: center;
   background-color: #f1f1f1;
@@ -358,6 +358,14 @@ ul.nav:hover {
 }
 
 /* Responsive columns - one column layout (vertical) on small screens */
+@media screen and (max-width: 768px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .column {
     width: 100%;
@@ -383,7 +391,7 @@ ul.nav:hover {
 .activo {
   background-color:#c4e3eb ;
   color: black;
-  
+
 }
 
 .porcentaje {
@@ -400,7 +408,7 @@ a.sel2.activo {
 }
 
 a.sel2.activo::before {
-  content: " "; 
+  content: " ";
   position: absolute;
   margin-top: 2.5px;
   left: 25px;
