--- a/src/app/components/informes/informe-descuento/informe-descuento.component.html
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.html
@@ -1,4 +1,4 @@
-<div class="grid">
+<div class="grid-informs">
   <!-- chart descuento promedio -->
   <div class="chart-container">
     <div class="alignFilterChart">
