--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
@@ -1,4 +1,4 @@
-<div class="grid">
+<div class="grid-informs">
   <!-- chart -->
   <div class="chart-container">
     <div class="alignFilterChart">
