implementando vista de materiales

--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -356,6 +356,12 @@
             </div>
         </div>
         <div class="item3-content">
+            <!-- aca va el chart -->
+            <div class="chart-line">
+                <canvas id="myChartMateriales">
+                    
+                </canvas>
+            </div>
 
         </div>
     </div>
