--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -88,14 +88,14 @@
     </div>
   </div>
   <!-- fin boton ocultar -->
-  <div class="container-cards mt-3 ml-3 mr-3">
+  <div class="container-cards mr-4 ml-4 mt-4">
     <div class="grid">
       <div class="titulo-grid1">
-        <h1 class="titulo-h1">Categorías</h1>
+        <h1 class="titulo1">Categorías</h1>
       </div>
 
       <div class="input-grid1">
-        
+
         <input type="text" class="form-control datepickerMargin" [(ngModel)]="inicio" (ngModelChange)="fechaInicio()" placeholder="Fecha inicial" onfocus="(this.type='date')" onblur="(this.type='text')">
         <input type="text" class="form-control datepickerMargin" [(ngModel)]="fin" (ngModelChange)="fechaFin()" placeholder="Fecha final" onfocus="(this.type='date')" onblur="(this.type='text')">
 
@@ -136,7 +136,7 @@
                   </li>
                 </ul>
               </li>
-  
+
               <li class="active mt-2">
                 <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
                   class="dropdown-toggle menu-color">Categoria
@@ -153,7 +153,7 @@
                   </li>
                 </ul>
               </li>
-  
+
               <li class="active mt-2">
                 <a href="#filterSubCategory" data-toggle="collapse" aria-expanded="false"
                   class="dropdown-toggle menu-color">Sub categoría
@@ -171,7 +171,7 @@
                   </li>
                 </ul>
               </li>
-  
+
               <li class="active mt-2">
                 <a href="#filterTipoPrenda" data-toggle="collapse" aria-expanded="false"
                   class="dropdown-toggle menu-color">Tipo de prenda
@@ -191,7 +191,7 @@
                   </div>
                 </ul>
               </li>
-  
+
               <li class="active mt-2">
                 <a href="#filterColor" data-toggle="collapse" aria-expanded="false"
                   class="dropdown-toggle menu-color">Color
@@ -208,7 +208,7 @@
                   </div>
                 </ul>
               </li>
-  
+
               <li class="active mt-2">
                 <a href="#filterComposicion" data-toggle="collapse" aria-expanded="false"
                   class="dropdown-toggle menu-color">Composición
@@ -227,7 +227,7 @@
                     </li>
                   </div>
                 </ul>
-              </li>              
+              </li>
 
             </ul>
           </div>
@@ -381,7 +381,7 @@
                     </li>
                   </ul>
                 </li>
-    
+
                 <li class="active mt-2">
                   <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
                     class="dropdown-toggle menu-color">Categoria
@@ -398,7 +398,7 @@
                     </li>
                   </ul>
                 </li>
-    
+
                 <li class="active mt-2">
                   <a href="#filterSubCategory" data-toggle="collapse" aria-expanded="false"
                     class="dropdown-toggle menu-color">Sub categoría
@@ -416,7 +416,7 @@
                     </li>
                   </ul>
                 </li>
-    
+
                 <li class="active mt-2">
                   <a href="#filterTipoPrenda" data-toggle="collapse" aria-expanded="false"
                     class="dropdown-toggle menu-color">Tipo de prenda
@@ -436,7 +436,7 @@
                     </div>
                   </ul>
                 </li>
-    
+
                 <li class="active mt-2">
                   <a href="#filterColor" data-toggle="collapse" aria-expanded="false"
                     class="dropdown-toggle menu-color">Color
@@ -453,7 +453,7 @@
                     </div>
                   </ul>
                 </li>
-    
+
                 <li class="active mt-2">
                   <a href="#filterComposicion" data-toggle="collapse" aria-expanded="false"
                     class="dropdown-toggle menu-color">Composición
