--- a/src/app/components/productos/cat-hombre/cat-hombre.component.html
+++ b/src/app/components/productos/cat-hombre/cat-hombre.component.html
@@ -2,12 +2,14 @@
 <div class="container-top mt-3">
   <div class="grid">
     <div class="titulo-grid1">
-      <h1 class="titulo-h1">Hombres</h1>
+      <h1 class="titulo1">Hombres</h1>
     </div>
 
     <div class="input-grid1">
-      <input type="text" class="form-control datepickerMargin" [(ngModel)]="inicio" (ngModelChange)="fechaInicio()" placeholder="Fecha inicial" onfocus="(this.type='date')" onblur="(this.type='text')">
-      <input type="text" class="form-control datepickerMargin" [(ngModel)]="fin" (ngModelChange)="fechaFin()" placeholder="Fecha final" onfocus="(this.type='date')" onblur="(this.type='text')">
+      <input type="text" class="form-control datepickerMargin" [(ngModel)]="inicio" (ngModelChange)="fechaInicio()"
+        placeholder="Fecha inicial" onfocus="(this.type='date')" onblur="(this.type='text')">
+      <input type="text" class="form-control datepickerMargin" [(ngModel)]="fin" (ngModelChange)="fechaFin()"
+        placeholder="Fecha final" onfocus="(this.type='date')" onblur="(this.type='text')">
 
       <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
         xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
