--- a/src/app/components/productos/cat-mujer/cat-mujer.component.css
+++ b/src/app/components/productos/cat-mujer/cat-mujer.component.css
@@ -81,6 +81,10 @@
   .grid {
     display: block;
   }
+
+  .titulo1 {
+    text-align: center;
+  }
 }
 
 /*CSS GRID*/
@@ -192,7 +196,7 @@
   border: none;
 } */
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1024px) {
   .grid-container {
     display: block;
   }
@@ -204,6 +208,10 @@
   .grid-container-item2 {
     display: grid;
     grid-template-columns: 90% 10%;
+  }
+
+  .item3 {
+    margin-top: 5%;
   }
 }
 
